--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.idea/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -87,3 +88,6 @@ ENV/
 
 # Rope project settings
 .ropeproject
+*.pickle
+*.csv
+*.txt
